<resources>
    <string name="app_name">Country App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="region">Region</string>
    <string name="name">Name</string>
    <string name="capital">Capital</string>
    <string name="population">Population</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="date">Date</string>
    <string name="pressure">Pressure</string>
    <string name="temp">Temp</string>
    <string name="humidity">Humidity</string>
</resources>
