<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.CountryInfoFragment">


    <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            app:layout_constraintDimensionRatio="h,4:3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_wb_sunny"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateTV"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            style="@style/WeatherInfo.HeaderText" android:text="@string/date"/>
    <TextView
            android:text="@string/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tempTV"
            app:layout_constraintStart_toStartOf="@+id/dateTV"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dateTV"
            style="@style/WeatherInfo.HeaderText"/>

    <TextView
            android:text="@string/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pressureTV"
            app:layout_constraintStart_toStartOf="@+id/dateTV"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tempTV"
            style="@style/WeatherInfo.HeaderText"/>

    <TextView
            android:text="@string/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/humidityTV"
            app:layout_constraintStart_toStartOf="@+id/dateTV"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pressureTV"
            style="@style/WeatherInfo.HeaderText"/>

    <android.support.constraint.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/barrier"
            app:barrierDirection="right"
            app:constraint_referenced_ids="tempTV,humidityTV,dateTV,pressureTV"
            tools:layout_editor_absoluteX="411dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/dateValue"
            app:layout_constraintStart_toStartOf="@id/barrier"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/dateTV"
            style="@style/WeatherInfo.ValueText"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tempValue"
            app:layout_constraintTop_toTopOf="@+id/tempTV"
            app:layout_constraintStart_toStartOf="@+id/dateValue"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            android:layout_marginEnd="8dp"
            style="@style/WeatherInfo.ValueText"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/pressureValue"
            app:layout_constraintTop_toTopOf="@+id/pressureTV"
            app:layout_constraintStart_toStartOf="@+id/dateValue"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            android:layout_marginEnd="8dp"
            style="@style/WeatherInfo.ValueText"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/humidityValue"
            app:layout_constraintTop_toTopOf="@+id/humidityTV"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/dateValue"
            android:layout_marginEnd="8dp"
            style="@style/WeatherInfo.ValueText"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="8dp"/>

</android.support.constraint.ConstraintLayout>