<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.CountryInfoFragment">


    <ImageView
            android:layout_width="120dp"
            android:layout_height="0dp"
            tools:src="@tools:sample/backgrounds/scenic[6]"
            android:id="@+id/imageView"
            app:layout_constraintDimensionRatio="h,4:3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameTV"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            style="@style/CountryDetails.HeaderText"/>
    <TextView
            android:text="@string/region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/regionTV"
            app:layout_constraintStart_toStartOf="@+id/nameTV"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/nameTV"
            style="@style/CountryDetails.HeaderText"/>

    <TextView
            android:text="@string/capital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/capitalTV"
            app:layout_constraintStart_toStartOf="@+id/nameTV"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/regionTV"
            style="@style/CountryDetails.HeaderText"/>

    <TextView
            android:text="@string/population"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/populationTV"
            app:layout_constraintStart_toStartOf="@+id/nameTV"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/capitalTV"
            style="@style/CountryDetails.HeaderText"/>

    <!--<android.support.constraint.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/barrier"
            app:barrierDirection="end"
            android:visibility="visible"
            app:constraint_referenced_ids="nameTV,regionTV,capitalTV,populationTV"/>-->
    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nameValue"
            app:layout_constraintStart_toEndOf="@+id/nameTV"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/nameTV"
            style="@style/CountryDetails.ValueText"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/regionValue"
            app:layout_constraintTop_toTopOf="@+id/regionTV"
            app:layout_constraintStart_toStartOf="@+id/nameValue"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            android:layout_marginEnd="8dp"
            style="@style/CountryDetails.ValueText"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/capitalValue"
            app:layout_constraintTop_toTopOf="@+id/capitalTV"
            app:layout_constraintStart_toStartOf="@+id/nameValue"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            android:layout_marginEnd="8dp"
            style="@style/CountryDetails.ValueText"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/populationValue"
            app:layout_constraintTop_toTopOf="@+id/populationTV"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/populationTV"
            android:layout_marginEnd="8dp"
            style="@style/CountryDetails.ValueText"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>